QPID-8653: [Broker-J] Code cleanup: broker-core - collection type arguments, collection factory methods, lambdas (#205)
* QPID-8653: [Broker-J] Code cleanup: collection type arguments, collection factory methods, lambdas

* Replaced singleton with Set.of() and Map.of() in ManagementModeStoreHandler.java

* Replaced singleton with Set.of() and Map.of() in TopicParser.java

* Replaced emptySet() by Set.of in TopicParser.java

* Replaced singleton with Set.of() and Map.of() in BrokerImpl.java

* Replaced singleton with Set.of() in Model.java

* Replaced singleton by Set.of() in SystemConfigBootstrapModel.java

* Replaced singleton by Map.of() in PrincipalDatabaseAuthenticationManager.java

* Reverted changes in Model.java

* Reverted changes in SystemConfigBootstrapModel.java

---------

Co-authored-by: vavrtom <vavricka.tomas@gmail.com>